sim: added sim config reading, arg picking, process constructore and some time routing

--- a/src/slurmctld/Makefile.am
+++ b/src/slurmctld/Makefile.am
@@ -74,6 +74,8 @@ slurmctld_SOURCES =     \
 if ENABLE_SIMULATOR
 slurmctld_SOURCES +=	\
     ../../contribs/sim/sim_time.c	\
+    ../../contribs/sim/sim_init.c	\
+    ../../contribs/sim/sim_conf.c	\
 	../../contribs/sim/slurmctld_controller.c	\
 	agent.c
 else
