--- a/src/common/Makefile.in
+++ b/src/common/Makefile.in
@@ -93,6 +93,7 @@ build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
 noinst_PROGRAMS = libcommon.o$(EXEEXT)
+@ENABLE_SIMULATOR_TRUE@am__append_1 = ../../contribs/sim/sim_pthread.c
 subdir = src/common
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/auxdir/ax_check_compile_flag.m4 \
@@ -159,6 +160,7 @@ PROGRAMS = $(noinst_PROGRAMS)
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libcommon_la_DEPENDENCIES = $(am__DEPENDENCIES_1)
+@ENABLE_SIMULATOR_TRUE@am__objects_1 = sim_pthread.lo
 am_libcommon_la_OBJECTS = assoc_mgr.lo bitstring.lo callerid.lo \
 	cbuf.lo conmgr.lo cpu_frequency.lo cron.lo daemonize.lo \
 	data.lo eio.lo env.lo fd.lo fetch_config.lo forward.lo \
@@ -179,7 +181,7 @@ am_libcommon_la_OBJECTS = assoc_mgr.lo bitstring.lo callerid.lo \
 	timers.lo track_script.lo tres_bind.lo tres_frequency.lo \
 	uid.lo util-net.lo working_cluster.lo workq.lo \
 	write_labelled_message.lo x11_util.lo xassert.lo xhash.lo \
-	xmalloc.lo xregex.lo xsignal.lo xstring.lo
+	xmalloc.lo xregex.lo xsignal.lo xstring.lo $(am__objects_1)
 libcommon_la_OBJECTS = $(am_libcommon_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -227,8 +229,8 @@ am__depfiles_remade = ./$(DEPDIR)/assoc_mgr.Plo \
 	./$(DEPDIR)/proc_args.Plo ./$(DEPDIR)/read_config.Plo \
 	./$(DEPDIR)/reverse_tree.Plo ./$(DEPDIR)/run_command.Plo \
 	./$(DEPDIR)/run_in_daemon.Plo ./$(DEPDIR)/setproctitle.Plo \
-	./$(DEPDIR)/slurm_errno.Plo ./$(DEPDIR)/slurm_opt.Plo \
-	./$(DEPDIR)/slurm_persist_conn.Plo \
+	./$(DEPDIR)/sim_pthread.Plo ./$(DEPDIR)/slurm_errno.Plo \
+	./$(DEPDIR)/slurm_opt.Plo ./$(DEPDIR)/slurm_persist_conn.Plo \
 	./$(DEPDIR)/slurm_protocol_api.Plo \
 	./$(DEPDIR)/slurm_protocol_defs.Plo \
 	./$(DEPDIR)/slurm_protocol_pack.Plo \
@@ -561,171 +563,45 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 AM_CPPFLAGS = -I$(top_srcdir) -DSBINDIR=\"$(sbindir)\"
 noinst_LTLIBRARIES = libcommon.la
-libcommon_la_SOURCES = \
-	assoc_mgr.c				\
-	assoc_mgr.h				\
-	bitstring.c				\
-	bitstring.h				\
-	callerid.c				\
-	callerid.h				\
-	cbuf.c					\
-	cbuf.h					\
-	conmgr.c				\
-	conmgr.h				\
-	cpu_frequency.c				\
-	cpu_frequency.h				\
-	cron.c					\
-	cron.h					\
-	daemonize.c				\
-	daemonize.h				\
-	data.c					\
-	data.h					\
-	eio.c					\
-	eio.h					\
-	env.c					\
-	env.h					\
-	fd.c					\
-	fd.h					\
-	fetch_config.c				\
-	fetch_config.h				\
-	forward.c				\
-	forward.h				\
-	global_defaults.c			\
-	group_cache.c				\
-	group_cache.h				\
-	half_duplex.c				\
-	half_duplex.h				\
-	hostlist.c				\
-	hostlist.h				\
-	http.h					\
-	http.c					\
-	io_hdr.c				\
-	io_hdr.h				\
-	job_features.c				\
-	job_features.h				\
-	job_options.c				\
-	job_options.h				\
-	job_resources.c				\
-	job_resources.h				\
-	list.c					\
-	list.h					\
-	log.c					\
-	log.h					\
-	macros.h				\
-	net.c					\
-	net.h					\
-	node_conf.c				\
-	node_conf.h				\
-	oci_config.c				\
-	oci_config.h				\
-	optz.c					\
-	optz.h					\
-	pack.c					\
-	pack.h					\
-	parse_config.c				\
-	parse_config.h				\
-	parse_time.c				\
-	parse_time.h				\
-	parse_value.c				\
-	parse_value.h				\
-	plugin.c				\
-	plugin.h				\
-	plugrack.c				\
-	plugrack.h				\
-	print_fields.c				\
-	print_fields.h				\
-	proc_args.c				\
-	proc_args.h				\
-	read_config.c				\
-	read_config.h				\
-	ref.h					\
-	reverse_tree.c				\
-	reverse_tree.h				\
-	run_command.c				\
-	run_command.h				\
-	run_in_daemon.c				\
-	run_in_daemon.h				\
-	setproctitle.c				\
-	setproctitle.h				\
-	slurm_errno.c				\
-	slurm_opt.c				\
-	slurm_opt.h				\
-	slurm_persist_conn.c			\
-	slurm_persist_conn.h			\
-	slurm_protocol_api.c			\
-	slurm_protocol_api.h			\
-	slurm_protocol_common.h			\
-	slurm_protocol_defs.c			\
-	slurm_protocol_defs.h			\
-	slurm_protocol_interface.h		\
-	slurm_protocol_pack.c			\
-	slurm_protocol_pack.h			\
-	slurm_protocol_util.c			\
-	slurm_protocol_util.h			\
-	slurm_protocol_socket.c			\
-	slurm_resolv.c				\
-	slurm_resolv.h				\
-	slurm_resource_info.c			\
-	slurm_resource_info.h			\
-	slurm_rlimits_info.c			\
-	slurm_rlimits_info.h			\
-	slurm_step_layout.c			\
-	slurm_step_layout.h			\
-	slurm_time.c				\
-	slurm_time.h				\
-	slurm_xlator.h				\
-	slurmdb_defs.c				\
-	slurmdb_defs.h				\
-	slurmdb_pack.c				\
-	slurmdb_pack.h				\
-	slurmdbd_defs.c				\
-	slurmdbd_defs.h				\
-	slurmdbd_pack.c				\
-	slurmdbd_pack.h				\
-	spank.c					\
-	spank.h					\
-	state_control.c				\
-	state_control.h				\
-	stepd_api.c				\
-	stepd_api.h				\
-	strlcpy.c				\
-	strlcpy.h				\
-	strnatcmp.c				\
-	strnatcmp.h				\
-	timers.c				\
-	timers.h				\
-	track_script.c				\
-	track_script.h				\
-	tres_bind.c				\
-	tres_bind.h				\
-	tres_frequency.c			\
-	tres_frequency.h			\
-	uid.c					\
-	uid.h					\
-	uthash.h				\
-	util-net.c				\
-	util-net.h				\
-	working_cluster.c			\
-	working_cluster.h			\
-	workq.c					\
-	workq.h					\
-	write_labelled_message.c		\
-	write_labelled_message.h		\
-	x11_util.c				\
-	x11_util.h				\
-	xassert.c				\
-	xassert.h				\
-	xhash.c					\
-	xhash.h					\
-	xmalloc.c				\
-	xmalloc.h				\
-	xregex.c				\
-	xregex.h				\
-	xsignal.c				\
-	xsignal.h				\
-	xstring.c				\
-	xstring.h
-
+libcommon_la_SOURCES = assoc_mgr.c assoc_mgr.h bitstring.c bitstring.h \
+	callerid.c callerid.h cbuf.c cbuf.h conmgr.c conmgr.h \
+	cpu_frequency.c cpu_frequency.h cron.c cron.h daemonize.c \
+	daemonize.h data.c data.h eio.c eio.h env.c env.h fd.c fd.h \
+	fetch_config.c fetch_config.h forward.c forward.h \
+	global_defaults.c group_cache.c group_cache.h half_duplex.c \
+	half_duplex.h hostlist.c hostlist.h http.h http.c io_hdr.c \
+	io_hdr.h job_features.c job_features.h job_options.c \
+	job_options.h job_resources.c job_resources.h list.c list.h \
+	log.c log.h macros.h net.c net.h node_conf.c node_conf.h \
+	oci_config.c oci_config.h optz.c optz.h pack.c pack.h \
+	parse_config.c parse_config.h parse_time.c parse_time.h \
+	parse_value.c parse_value.h plugin.c plugin.h plugrack.c \
+	plugrack.h print_fields.c print_fields.h proc_args.c \
+	proc_args.h read_config.c read_config.h ref.h reverse_tree.c \
+	reverse_tree.h run_command.c run_command.h run_in_daemon.c \
+	run_in_daemon.h setproctitle.c setproctitle.h slurm_errno.c \
+	slurm_opt.c slurm_opt.h slurm_persist_conn.c \
+	slurm_persist_conn.h slurm_protocol_api.c slurm_protocol_api.h \
+	slurm_protocol_common.h slurm_protocol_defs.c \
+	slurm_protocol_defs.h slurm_protocol_interface.h \
+	slurm_protocol_pack.c slurm_protocol_pack.h \
+	slurm_protocol_util.c slurm_protocol_util.h \
+	slurm_protocol_socket.c slurm_resolv.c slurm_resolv.h \
+	slurm_resource_info.c slurm_resource_info.h \
+	slurm_rlimits_info.c slurm_rlimits_info.h slurm_step_layout.c \
+	slurm_step_layout.h slurm_time.c slurm_time.h slurm_xlator.h \
+	slurmdb_defs.c slurmdb_defs.h slurmdb_pack.c slurmdb_pack.h \
+	slurmdbd_defs.c slurmdbd_defs.h slurmdbd_pack.c \
+	slurmdbd_pack.h spank.c spank.h state_control.c \
+	state_control.h stepd_api.c stepd_api.h strlcpy.c strlcpy.h \
+	strnatcmp.c strnatcmp.h timers.c timers.h track_script.c \
+	track_script.h tres_bind.c tres_bind.h tres_frequency.c \
+	tres_frequency.h uid.c uid.h uthash.h util-net.c util-net.h \
+	working_cluster.c working_cluster.h workq.c workq.h \
+	write_labelled_message.c write_labelled_message.h x11_util.c \
+	x11_util.h xassert.c xassert.h xhash.c xhash.h xmalloc.c \
+	xmalloc.h xregex.c xregex.h xsignal.c xsignal.h xstring.c \
+	xstring.h $(am__append_1)
 libcommon_la_LIBADD = $(libselinux_LIBS)
 libcommon_la_LDFLAGS = $(LIB_LDFLAGS) -module --export-dynamic
 
@@ -837,6 +713,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/run_command.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/run_in_daemon.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/setproctitle.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sim_pthread.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/slurm_errno.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/slurm_opt.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/slurm_persist_conn.Plo@am__quote@ # am--include-marker
@@ -902,6 +779,13 @@ am--depfiles: $(am__depfiles_remade)
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LTCOMPILE) -c -o $@ $<
+
+sim_pthread.lo: ../../contribs/sim/sim_pthread.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT sim_pthread.lo -MD -MP -MF $(DEPDIR)/sim_pthread.Tpo -c -o sim_pthread.lo `test -f '../../contribs/sim/sim_pthread.c' || echo '$(srcdir)/'`../../contribs/sim/sim_pthread.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/sim_pthread.Tpo $(DEPDIR)/sim_pthread.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='../../contribs/sim/sim_pthread.c' object='sim_pthread.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o sim_pthread.lo `test -f '../../contribs/sim/sim_pthread.c' || echo '$(srcdir)/'`../../contribs/sim/sim_pthread.c
 
 mostlyclean-libtool:
 	-rm -f *.lo
@@ -1042,6 +926,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/run_command.Plo
 	-rm -f ./$(DEPDIR)/run_in_daemon.Plo
 	-rm -f ./$(DEPDIR)/setproctitle.Plo
+	-rm -f ./$(DEPDIR)/sim_pthread.Plo
 	-rm -f ./$(DEPDIR)/slurm_errno.Plo
 	-rm -f ./$(DEPDIR)/slurm_opt.Plo
 	-rm -f ./$(DEPDIR)/slurm_persist_conn.Plo
@@ -1167,6 +1052,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/run_command.Plo
 	-rm -f ./$(DEPDIR)/run_in_daemon.Plo
 	-rm -f ./$(DEPDIR)/setproctitle.Plo
+	-rm -f ./$(DEPDIR)/sim_pthread.Plo
 	-rm -f ./$(DEPDIR)/slurm_errno.Plo
 	-rm -f ./$(DEPDIR)/slurm_opt.Plo
 	-rm -f ./$(DEPDIR)/slurm_persist_conn.Plo
