sim: added built and ide project files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,11 @@ autom4te.cache
 /testsuite/python/pytest.ini
 TAGS
 tags
+# local build
+/build/
+# IDE
+/.cproject
+/.project
+/.idea
+/.settings
+
