sim: (autogenerated files)

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -486,7 +486,6 @@ SUBDIRS = \
 	scrun		\
 	sdiag		\
 	sinfo		\
-	slurmctld	\
 	slurmd		\
 	slurmdbd	\
 	slurmrestd	\
@@ -497,7 +496,8 @@ SUBDIRS = \
 	sshare		\
 	sstat		\
 	strigger	\
-	sview
+	sview		\
+	slurmctld
 
 all: all-recursive
 
