Edit makefiles for the new plugin

--- a/src/plugins/job_submit/carbon_logging/Makefile.am
+++ b/src/plugins/job_submit/carbon_logging/Makefile.am
@@ -4,10 +4,19 @@ AUTOMAKE_OPTIONS = foreign
 
 PLUGIN_FLAGS = -module -avoid-version --export-dynamic
 
-AM_CPPFLAGS = -DSLURM_PLUGIN_DEBUG -I$(top_srcdir) -I$(top_srcdir)/src/common
+AM_CPPFLAGS = -DSLURM_PLUGIN_DEBUG -I$(top_srcdir) -I$(top_srcdir)/src/common $(JSON_CPPFLAGS) $(LIBCURL_CPPFLAGS)
 
 pkglib_LTLIBRARIES = job_submit_carbon_logging.la
 
-# Job submit partition plugin.
-job_submit_partition_la_SOURCES = job_submit_carbon_logging.c
-job_submit_partition_la_LDFLAGS = $(PLUGIN_FLAGS)
+# Job submit carbon logging plugin.
+job_submit_carbon_logging_la_SOURCES = job_submit_carbon_logging.c
+job_submit_carbon_logging_la_LDFLAGS = $(PLUGIN_FLAGS) $(JSON_LDFLAGS) $(LIBCURL)
+# add CURL and JSON-C
+job_submit_logging_la_LIBADD = $(LIBCURL) $(JSON_LDFLAGS)
+
+force:
+$(job_submit_logging_la_LIBADD) : force
+	@cd `dirname $@` && $(MAKE) `basename $@`
+
+
+
