--- a/src/plugins/job_submit/carbon_logging/Makefile.in
+++ b/src/plugins/job_submit/carbon_logging/Makefile.in
@@ -91,7 +91,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-subdir = src/plugins/job_submit/partition
+subdir = src/plugins/job_submit/carbon_logging
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/auxdir/ax_check_compile_flag.m4 \
 	$(top_srcdir)/auxdir/ax_compare_version.m4 \
@@ -182,17 +182,17 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(pkglibdir)"
 LTLIBRARIES = $(pkglib_LTLIBRARIES)
-job_submit_partition_la_LIBADD =
-am_job_submit_partition_la_OBJECTS = job_submit_partition.lo
-job_submit_partition_la_OBJECTS =  \
-	$(am_job_submit_partition_la_OBJECTS)
+job_submit_carbon_logging_la_LIBADD =
+am_job_submit_carbon_logging_la_OBJECTS = job_submit_carbon_logging.lo
+job_submit_carbon_logging_la_OBJECTS =  \
+	$(am_job_submit_carbon_logging_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
 am__v_lt_1 = 
-job_submit_partition_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
+job_submit_carbon_logging_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
-	$(AM_CFLAGS) $(CFLAGS) $(job_submit_partition_la_LDFLAGS) \
+	$(AM_CFLAGS) $(CFLAGS) $(job_submit_carbon_logging_la_LDFLAGS) \
 	$(LDFLAGS) -o $@
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -209,7 +209,7 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir) -I$(top_builddir)/slurm
 depcomp = $(SHELL) $(top_srcdir)/auxdir/depcomp
 am__maybe_remake_depfiles = depfiles
-am__depfiles_remade = ./$(DEPDIR)/job_submit_partition.Plo
+am__depfiles_remade = ./$(DEPDIR)/job_submit_carbon_logging.Plo
 am__mv = mv -f
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -229,7 +229,7 @@ AM_V_CCLD = $(am__v_CCLD_@AM_V@)
 am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
 am__v_CCLD_0 = @echo "  CCLD    " $@;
 am__v_CCLD_1 = 
-SOURCES = $(job_submit_partition_la_SOURCES)
+SOURCES = $(job_submit_carbon_logging_la_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -520,11 +520,15 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 PLUGIN_FLAGS = -module -avoid-version --export-dynamic
 AM_CPPFLAGS = -DSLURM_PLUGIN_DEBUG -I$(top_srcdir) -I$(top_srcdir)/src/common
-pkglib_LTLIBRARIES = job_submit_partition.la
+pkglib_LTLIBRARIES = job_submit_carbon_logging.la
 
-# Job submit partition plugin.
-job_submit_partition_la_SOURCES = job_submit_partition.c
-job_submit_partition_la_LDFLAGS = $(PLUGIN_FLAGS)
+# Job submit carbon logging plugin.
+job_submit_carbon_logging_la_SOURCES = job_submit_carbon_logging.c
+job_submit_carbon_logging_la_LDFLAGS = $(PLUGIN_FLAGS) $(JSON_LDFLAGS) $(LIBCURL)
+job_submit_logging_la_LIBADD = $(LIBCURL) $(JSON_LDFLAGS)
+
+
+
 all: all-am
 
 .SUFFIXES:
@@ -538,9 +542,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/plugins/job_submit/partition/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign src/plugins/job_submit/carbon_logging/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign src/plugins/job_submit/partition/Makefile
+	  $(AUTOMAKE) --foreign src/plugins/job_submit/carbon_logging/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -594,8 +598,8 @@ clean-pkglibLTLIBRARIES:
 	  rm -f $${locs}; \
 	}
 
-job_submit_partition.la: $(job_submit_partition_la_OBJECTS) $(job_submit_partition_la_DEPENDENCIES) $(EXTRA_job_submit_partition_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(job_submit_partition_la_LINK) -rpath $(pkglibdir) $(job_submit_partition_la_OBJECTS) $(job_submit_partition_la_LIBADD) $(LIBS)
+job_submit_carbon_logging.la: $(job_submit_carbon_logging_la_OBJECTS) $(job_submit_carbon_logging_la_DEPENDENCIES) $(EXTRA_job_submit_carbon_logging_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(job_submit_carbon_logging_la_LINK) -rpath $(pkglibdir) $(job_submit_carbon_logging_la_OBJECTS) $(job_submit_carbon_logging_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -603,7 +607,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/job_submit_partition.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/job_submit_carbon_logging.Plo@am__quote@ # am--include-marker
 
 $(am__depfiles_remade):
 	@$(MKDIR_P) $(@D)
@@ -732,7 +736,7 @@ clean-am: clean-generic clean-libtool clean-pkglibLTLIBRARIES \
 	mostlyclean-am
 
 distclean: distclean-am
-		-rm -f ./$(DEPDIR)/job_submit_partition.Plo
+		-rm -f ./$(DEPDIR)/job_submit_carbon_logging.Plo
 	-rm -f Makefile
 distclean-am: clean-am distclean-compile distclean-generic \
 	distclean-tags
@@ -778,7 +782,7 @@ install-ps-am:
 installcheck-am:
 
 maintainer-clean: maintainer-clean-am
-		-rm -f ./$(DEPDIR)/job_submit_partition.Plo
+		-rm -f ./$(DEPDIR)/job_submit_carbon_logging.Plo
 	-rm -f Makefile
 maintainer-clean-am: distclean-am maintainer-clean-generic
 
